[TFX-556] changes per code review